Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39591

QWebFrame::hitTestContent returns null element on valid HTML element

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.2
    • 5.3.1
    • WebKit
    • None
    • Gentoo Linux with xcb platform plugin. Compiled from git source (Release).
    • 4ff43880b4f6dcb4e1f3d8d38b32a96da2b80c6c

      QWebFrame::hitTestContent returns element with tagName "" despite clicking on valid HTML elements (such as, for example, text inside <p>).
      This is a bug since hitTestContent sent from mainFrame is meant to hitTest through all child frames as well and return the most precise variant.
      To reproduce, override mouse click events to also output the element tagName taken from the result of the click location from the mainFrame, and then click on text on any page.
      Result will be "".

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            toast Chloe Taylor
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes