QWebHitTestResult::element() should return the inner element

QWebHitTestResult::element() currently only returns a non-null result
if the innernode happens to be an element. This means it will never
contain anything when hittesting over text.

This patch changes QWebHitTestResult::element() to instead return the
inner element.

Task-number: QTBUG-39591
Change-Id: Ic00f30d0b6429f2bcfb47f6e386be7d890d45bfb
Reviewed-by: Michael Bruning <michael.bruning@digia.com>